Support Cloudwatch metrics

--- a/backend-app/src/main/resources/application-production.yml
+++ b/backend-app/src/main/resources/application-production.yml
@@ -13,3 +13,6 @@ management:
   metrics:
     tags:
       environment: production
+    export.cloudwatch:
+      enabled: true
+      namespace: spring-boot-template
