--- a/backend-app/src/main/resources/application-qa.yml
+++ b/backend-app/src/main/resources/application-qa.yml
@@ -6,3 +6,6 @@ management:
   metrics:
     tags:
       environment: qa
+    export.cloudwatch:
+      enabled: true
+      namespace: spring-boot-template-qa
