[Infrastructure] Logging HTTP Request/Responses for Java backend

--- a/backend-app/src/main/resources/application-production.yml
+++ b/backend-app/src/main/resources/application-production.yml
@@ -16,3 +16,8 @@ management:
     export.cloudwatch:
       enabled: true
       namespace: spring-boot-template
+
+# https://github.com/zalando/logbook
+logbook:
+  strategy: status-at-least
+  minimum-status: 400
